--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -23,7 +23,7 @@
       <div class="card-footer text-muted">
         <h2>Edit</h2>
         <div class="d-flex justify-content-center">
-          <form class="form-inline" action="/urls" method="POST">
+          <form class="form-inline" action="/urls/<%=shortURL%>" method="POST">
             <div class="form-group mb-2">
               <label for="longURL">New URL:</label>
               <input
