--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -25,14 +25,22 @@
           <tr>
             <th scope="col">Short URL</th>
             <th scope="col">Long URL</th>
+            <th scope="col">Edit</th>
             <th scope="col">Delete</th>
           </tr>
         </thead>
         <tbody>
           <% for(let url in urls) { %>
           <tr>
-            <td><a href="/urls/<%= url %>"><%= url %></a></td>
+            <td><a href="/u/<%= url %>"><%= url %></a></td>
             <td><%= urls[url] %></td>
+            <td>
+              <form method="GET" action="/urls/<%= url %>">
+                <input type="submit" value="Edit" class="btn btn-outline-primary">
+                  
+                </button>
+              </form>
+            </td>
             <td>
               <form method="POST" action="/urls/<%= url %>/delete">
                 <input type="submit" value="Delete" class="btn btn-outline-danger">
