--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -17,12 +17,17 @@
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
-      <form class="form-inline my-2 my-lg-0 ml-auto">
+      <form
+        class="form-inline my-2 my-lg-0 ml-auto"
+        action="/login"
+        method="POST"
+      >
         <input
           class="form-control mr-sm-2"
-          type="search"
           placeholder="Username"
-          aria-label="Search"
+          name="username"
+          id="username"
+          type="text"
         />
         <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">
           Login
