--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -17,7 +17,21 @@
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
-      <%if(!username){%>
+      <%if(username){%>
+      <form
+        class="form-inline my-2 my-lg-0 ml-auto"
+        action="/logout"
+        method="POST"
+      >
+        <label class="mr-3 font-weight-bold text-dark"
+          >Logged in as: <%=username%>!
+        </label>
+        <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">
+          Logout
+        </button>
+      </form>
+      <%}else{%>
+
       <form
         class="form-inline my-2 my-lg-0 ml-auto"
         action="/login"
@@ -32,20 +46,6 @@
         />
         <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">
           Login
-        </button>
-      </form>
-      <%}else{%>
-
-      <form
-        class="form-inline my-2 my-lg-0 ml-auto"
-        action="/logout"
-        method="POST"
-      >
-        <label class="mr-3 font-weight-bold text-dark"
-          >Logged in as: <%=username%>!
-        </label>
-        <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">
-          Logout
         </button>
       </form>
       <%}%>
