--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -17,14 +17,14 @@
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
-      <%if(username){%>
+      <%if(user&&user["email"]){%>
       <form
         class="form-inline my-2 my-lg-0 ml-auto"
         action="/logout"
         method="POST"
       >
         <label class="mr-3 font-weight-bold text-dark"
-          >Logged in as: <%=username%>!
+          >Logged in as: <%=user["email"]%>!
         </label>
         <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">
           Logout
