--- a/views/new_user.ejs
+++ b/views/new_user.ejs
@@ -24,8 +24,8 @@
           <form class="col-4" action="/register" method="POST">
             <div class="form-group">
               <label for="email">Email address:</label>
+              <!-- temp commented out for testing of empty value type="email" -->
               <input
-                type="email"
                 class="form-control"
                 id="email"
                 name="email"
