--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -17,7 +17,7 @@
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
-      <%if(user&&user["email"]){%>
+      <%if(user){%>
       <form
         class="form-inline my-2 my-lg-0 ml-auto"
         action="/logout"
@@ -31,23 +31,29 @@
         </button>
       </form>
       <%}else{%>
+      <div class="navbar-nav ml-auto">
+        <a class="nav-item nav-link" href="/register">Register</a>
+        <a class="nav-item nav-link" href="/login">Login</a>
+      </div>
+      <!-- <form
+          class="form-inline my-2 my-lg-0 ml-auto"
+          action="/login"
+          method="GET"
+        >
+          <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">
+            Register
+          </button>
+        </form>
+        <form
+          class="form-inline my-2 my-lg-0 ml-auto"
+          action="/register"
+          method="GET"
+        >
+          <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">
+            Login
+          </button>
+        </form> -->
 
-      <form
-        class="form-inline my-2 my-lg-0 ml-auto"
-        action="/login"
-        method="POST"
-      >
-        <input
-          class="form-control mr-sm-2"
-          placeholder="Username"
-          name="username"
-          id="username"
-          type="text"
-        />
-        <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">
-          Login
-        </button>
-      </form>
       <%}%>
     </div>
   </nav>
