minor syntax refactoring

--- a/views/urls_new.ejs
+++ b/views/urls_new.ejs
@@ -29,6 +29,7 @@
           <input
             class="form-control"
             id="longURL"
+            value="http://"
             type="text"
             name="longURL"
             placeholder="http://"
