--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -42,7 +42,7 @@
               </form>
             </td>
             <td>
-              <form method="POST" action="/urls/<%= url %>/delete">
+              <form method="POST" action="/urls/<%= url %>?_method=DELETE">
                 <input type="submit" value="Delete" class="btn btn-outline-danger">
                   
                 </button>
