--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -25,6 +25,8 @@
           <tr>
             <th scope="col">Short URL</th>
             <th scope="col">Long URL</th>
+            <th scope="col">Total Visits</th>
+            <th scope="col">Unique Visits</th>
             <th scope="col">Edit</th>
             <th scope="col">Delete</th>
           </tr>
@@ -33,7 +35,9 @@
           <% for(let url in urls) { %>
           <tr>
             <td><a href="/u/<%= url %>"><%= url %></a></td>
-            <td><%= urls[url] %></td>
+            <td><%= urls[url].longURL %></td>
+            <td><%= urls[url].totalVisits %></td>
+            <td><%= urls[url].uniqueVisits %></td>
             <td>
               <form method="GET" action="/urls/<%= url %>">
                 <input type="submit" value="Edit" class="btn btn-outline-primary">
